--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ArjunMohanVerma.github.io/hoas//",
+  "homepage": "https://ArjunMohanVerma.github.io/hostingapp//",
   "name": "website",
   
   "version": "0.1.0",
